implement `get_sections_v1` lambda
