# api/gen/src/models/mod.rs
@@ -44,8 +44,12 @@ pub mod multi_answers_dto;
 pub use self::multi_answers_dto::MultiAnswersDto;
 pub mod option_dto;
 pub use self::option_dto::OptionDto;
+pub mod personalized_section_dto;
+pub use self::personalized_section_dto::PersonalizedSectionDto;
 pub mod personalized_task_dto;
 pub use self::personalized_task_dto::PersonalizedTaskDto;
+pub mod personalized_task_preview_dto;
+pub use self::personalized_task_preview_dto::PersonalizedTaskPreviewDto;
 pub mod platform_dto;
 pub use self::platform_dto::PlatformDto;
 pub mod playground_variation_dto;
