# api/lambda/content/dto/src/mapper/mod.rs
@@ -13,7 +13,9 @@ mod hint_dto;
 mod keyword_dto;
 mod keyword_modifier_dto;
 mod option_dto;
+mod personalized_section_dto;
 mod personalized_task_dto;
+mod personalized_task_preview_dto;
 mod playground_variant_dto;
 mod public_task_dto;
 mod section_dto;
